UP-16. Fixed fullscreen image distortion.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -704,7 +704,6 @@ section.bl-expand .bl-icon-close {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
 }
 
 .picture p {
